# PRISM

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  prism-botx.2026-06-23.private-key.pem  setup.py
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
.jules/: sentinel.md
backend/: Dockerfile  README.md  alembic.ini  coverage.xml  pyproject.toml
backend/prism/: __init__.py  config.py  main.py
backend/prism/api/: __init__.py  analyses.py  health.py  webhooks.py
backend/prism/core/: __init__.py  rate_limiter.py
backend/prism/core/architecture/: __init__.py
backend/prism/core/llm/: __init__.py  orchestrator.py
backend/prism/core/risk_engine/: __init__.py  ai_reviewer.py  classifier.py  diff_parser.py  impact.py  llm_provider.py  patterns.py  scoring.py
backend/prism/db/: __init__.py  base.py  redis.py  session.py
backend/prism/integrations/: __init__.py  github.py  github_checks.py
backend/prism/migrations/: env.py
backend/prism/models/: __init__.py  analysis.py  event.py  org.py  pull_request.py  repository.py  user.py
backend/prism/services/: __init__.py
backend/prism/workers/: __init__.py
backend/tests/: __init__.py  test_health.py
docs/architecture/ADR/: 001-nextjs-fastapi-architecture.md
frontend/functions/api/: [[path]].ts
frontend/src/app/: layout.tsx
frontend/src/app/dashboard/: page.tsx
infrastructure/: nginx.conf
infrastructure/terraform/: main.tf
risk-patterns/: README.md
scratch/: test_gemini.py  test_mistral.py
